--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="heading">
-        <h1>Calculator</h1>
+    <div>
+      <h1>Calculator</h1>
     </div>
+    
     <div class="calculator">
       <div class="display">
         <input type="text" placeholder="0" id="input" disabled />
